apps/dssp-targetp-3/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-3
  namespace: prod
  labels:
    app: dssp-targetp-3
    backstage.io/kubernetes-id: dssp-targetp-3
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-3
  template:
    metadata:
      labels:
        app: dssp-targetp-3
        backstage.io/kubernetes-id: dssp-targetp-3
        environment: prod
    spec:
      containers:
        - name: dssp-targetp-3
          image: chaitanyapandeygspann/dssp-targetp-3:1.0.8
          ports:
            - containerPort: 5000
