apps/dssp-targetp-3/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-targetp-3
  namespace: prod
  labels:
    backstage.io/kubernetes-id: dssp-targetp-3
    environment: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /dssp-targetp-3(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dssp-targetp-3
                port:
                  number: 80
